# py2rely

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  release-please-config.json
.github/workflows/: make-docs.yml  publish-pypi.yaml  release-please.yaml
docs/: index.md
docs/api-reference/: overview.md
docs/getting-started/: installation.md  quick-start.md
docs/user-guide/: 2d-slab-classification.md  3d-subtomogram-averaging.md  claude-code-mcp.md  importing-data.md  overview.md  pipeline-ui.md  running-on-hpc-with-submitit.md
py2rely/: __init__.py  config.py  groups.py  import_tomograms_particles.py  main.py
py2rely/dashboard/: README.md  cli.py  maskcreate.py  models.py  parser.py  server.py  watcher.py
py2rely/dashboard/frontend/: index.html  package-lock.json  package.json
py2rely/dashboard/frontend/src/: App.jsx  MaskTunePage.jsx  main.jsx  theme.js
py2rely/dashboard/frontend/src/api/: http.js  socket.js
py2rely/dashboard/frontend/src/components/: AnalysisPanel.jsx  Class3DAnalysis.jsx  CtfFindAnalysis.jsx  DAGCanvas.jsx  DetailPanel.jsx  LogViewer.jsx  MaskTuneViewer.jsx  PolishAnalysis.jsx  PostProcessAnalysis.jsx  Refine3DAnalysis.jsx  ResultsViewer.jsx  Sidebar.jsx  Slice2DViewer.jsx  Topbar.jsx  Volume3DViewer.jsx
py2rely/mcp/: __main__.py  cli.py  server.py
py2rely/pipelines/: bin1.py  classify.py  cli.py  polishing.py  sta.py
py2rely/prepare/: cli.py  common.py  generate_parameters.py  parameters.py  particles.py  template.py  tilt_series.py
py2rely/relionui/: README.md  cli.py  parser.py  server.py  watcher.py
py2rely/relionui/frontend/src/: App.jsx  theme.js
py2rely/relionui/frontend/src/components/: CtfRefineAnalysis.jsx  DAGCanvas.jsx  DetailPanel.jsx  PostProcessAnalysis.jsx  Sidebar.jsx  Slice2DViewer.jsx  Topbar.jsx  Volume3DViewer.jsx
py2rely/routines/: class3d.py  cli.py  ctf_refine.py  export.py  extract_subtomo.py  helper.py  mask_create.py  post_process.py  reconstruct.py  refine.py  report.py  select.py  submit_slurm.py
py2rely/slabs/: class2D.py  cli.py  extract_slabs.py  pipeline.py  slurm.py
py2rely/slabs/visualize/: gallery.py  gui.py  web_gui.py
py2rely/utils/: common.py  converters.py  custom_jobs.py  map.py  progress.py  relion3_tools.py  relion4_tools.py  relion5_tools.py  sta_tools.py
pyrelion/: main.py
pyrelion/pipelines/: bin1.py  bin1_pipeline.py  classify.py  cli.py  polishing.py  polishing_v0.py  sta.py
pyrelion/prepare/: cli.py  generate_parameters.py  parameters.py  particles.py  template.py  tilt_series.py
pyrelion/routines/: class3d.py  cli.py  ctf_refine.py  custom_post_process.py  export.py  extract_subtomo.py  mask_create.py  post_process.py  reconstruct.py  refine.py  report.py  select.py  submit_slurm.py
pyrelion/slabs/: class2D.py  cli.py  extract_slabs.py  pipeline.py  slurm.py
pyrelion/slabs/preprocess/: default_parameters.py  parameters.py
pyrelion/slabs/visualize/: gallery.py  gui.py
pyrelion/utils/: relion4_tools.py  relion5_tools.py  sta_tools.py
relion_sta_pipeline/: bin1_pipeline.py  generate_parameters.py  highresolution_pipeline.py  import_tomograms_particles.py  main.py  polishing.py  prepare_relion5_input.py  relion5_pipeline.py
relion_sta_pipeline/pipelines/: bin1.py  bin1_pipeline.py  cli.py  polishing.py  sta.py
relion_sta_pipeline/prepare/: cli.py  common.py  generate_parameters.py  parameters.py  particles.py  tilt_series.py
relion_sta_pipeline/routines/: class3d.py  classify.py  cli.py  ctf_refine.py  export.py  extract_subtomo.py  post_process.py  reconstruct.py  reconstruct_particle.py  refine.py  report.py  select.py  submit_slurm.py  upsample.py
relion_sta_pipeline/utils/: convert_ts_to_position.py  converters.py  relion4_tools.py  relion5_tools.py  sta_tools.py
