[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyrelion"
requires-python = ">=3.9"
version = "0.1.0"
dependencies = [
    "click",
    "mrcfile",
    "starfile",
    "pydantic",
    "tqdm",
    "copick",
    "PyQt5",
    "pyqtgraph",    
    "pipeliner @ git+https://gitlab.com/ccpem/ccpem-pipeliner.git@main",
    "slabpick @ git+https://github.com/apeck12/slabpick.git@main"
]

[project.optional-dependencies]
pytom = ["pytom-match-pick"]
slabs = ["PyQt5", "pyqtgraph"]

[tool.hatch.metadata]
allow-direct-references = true

authors = [
  {name = "Jonathan Schwartz", email = "jonathan.schwartz@czii.org"},
]
description = "Command line tools to Run Automated Sub-Tomogram Averaging with Relion and CCPEM Pipeline."
readme = "README.md"
license = {file = "LICENSE"}

[project.scripts]
pyrelion = "pyrelion.main:routines"
pyrelion-slurm = "pyrelion.main:slurm_routines"
convert-star = "pyrelion.utils.convert_ts_to_position:cli"

[tool.hatch.version]
source = "vcs"

[tool.semantic_release]
version_variables = ["__init__.py:__version__"]
build_command = "pip install build && python -m build"

[tool.black]
line-length = 120
target_version = ['py39']

[tool.ruff]
select = [
    "E", "W",  # pycodestyle
    "F",  # pyflakes
    "B",  # bugbear
    "I",  # isort
    "N",  # pep8-naming
    "ASYNC",  # async
    "COM",  # commas
    "C4",  # comprehensions
    "DTZ",  # datetimez
    "ISC",  # implicit-str-concat
    "G",  # logging-format
    "T20",  # print
    "SIM",  # simplify
]

line-length = 120
target-version = "py310"

[tool.ruff.isort]
known-first-party =["common"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.mypy]
show_error_codes = true
ignore_missing_imports = true
warn_unreachable = true
strict = true
