[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py2rely"
requires-python = ">=3.9"
version = "0.6.0"  
dependencies = [
    "scipy",
    "gradio",
    "copick",
    "mrcfile",
    "starfile",
    "pydantic",
    "submitit",
    "rich-click",
    "zarr-particle-tools",
    "slabpick @ git+https://github.com/apeck12/slabpick.git@main",
    "pipeliner @ git+https://gitlab.com/ccpem/ccpem-pipeliner.git@main",
]
authors = [
  { name = "Jonathan Schwartz", email = "jonathan.schwartz@czii.org" }
  ]
description = "Command line tools to Run Automated Sub-Tomogram Averaging with Relion and CCPEM Pipeline."
readme = "README.md"
license = { file = "LICENSE" }

[project.optional-dependencies]
web = ["gradio", "pytz"]
gui = ["PyQt5", "pyqtgraph"]

[project.scripts]
py2rely = "py2rely.main:routines"
py2rely-slurm = "py2rely.main:slurm_routines"

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.ruff]
select = ["E","W","F","B","I","N","ASYNC","COM","C4","DTZ","ISC","G","T20","SIM"]
line-length = 120
target-version = "py39"

[tool.ruff.isort]
known-first-party = ["py2rely"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.mypy]
show_error_codes = true
ignore_missing_imports = true
warn_unreachable = true
strict = true
